@@ -46,6 +46,7 @@ Fixes:
 		Maybe use A* until we're at a suitable distance?
 	[ ] Show what non-tiles are in look mode (using the mouse or free look only)
 		Grass, trees, etc
+	[ ] How many times do we need to calculate `is_safe`?
 
 Cycles:
 	[ ] ALife searching for group leader when not found at `last_pos`
